syntax = "proto3";

package clientfs.v1;

option go_package = "github.com/sodami-hub/watchfs/api/v1";

message ClientFS {
    string initDir = 1;
    repeated string directories = 2;
    map<string,string> allFiles =3;
    map<string,string> changes =4;
}

message SaveChanges {
    string msg = 1;
    map<string,string> changeInfo = 2;
}

message ChangeHistory {
    repeated string history = 1;
}

message UserInfo {
    string id = 1;
    string pw = 2;
    string garageName = 3;
    int32 childProcessPid =4;
}